# yiban-memory-frame

./: .env.example  .gitignore  README.md  package.json  pyproject.toml  server.js
apps/device-ui/: app.js  index.html  styles.css
apps/family-web/: app.js  index.html  styles.css
deploy/: docker-compose.yml
docs/: development-plan.md  mvp-spec.md  smoke-check.md
services/api_server/: Dockerfile  ai.py  app.py  cache.py  config.py  db.py  deps.py  errors.py  ids.py  logic.py  repository.py  storage.py
services/api_server/api/: conversations.py  device.py  health.py  memories.py  messages.py  photos.py  state.py  summaries.py
