[project]
name = "yiban-memory-frame"
version = "0.2.0"
description = "Product MVP backend for Yiban Memory Frame"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "python-multipart>=0.0.9",
    "pydantic-settings>=2.4.0",
    "psycopg[binary,pool]>=3.2.1",
    "pgvector>=0.3.4",
    "redis>=5.0.8",
    "minio>=7.2.8",
    "httpx>=0.27.2",
    "numpy>=1.26.4",
]

[project.optional-dependencies]
ai = [
    "soundfile>=0.12.1",
    "torch>=2.3.0",
    "torchaudio>=2.3.0",
    "torchcodec>=0.5.0",
    "modelscope>=1.17.1",
    "addict>=2.4.0",
    "sentence-transformers>=3.0.1",
]

[tool.uv]
package = false
